# skillence_ai

./: .env.example  .gitignore  AGENTS.md  MVP.md  README.md  STATUS.md  frontend_auth_spec.md  frontend_dashboard_spec.md  frontend_email_notes.md  frontend_plan.md  migrate_no_quiz.py  pyproject.toml  requirements.txt  skillence_agent_kit.md  skillence_ai.db
.github/workflows/: status.yml  test.yml  tests.yml
agents/: formatter.py  lesson_generator.py  quality_utils.py  token_utils.py
api/: main.py
api/middleware/: logging.py
api/routes/: health.py
api/services/: __init__.py  lessons.py
scripts/: init_users_tables.py  update_status.py
skillence_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/: base.py  models.py
tests/: conftest.py  test_api_lessons.py  test_config.py  test_formatter.py  test_health.py  test_lesson_generator.py  test_quality_utils.py  test_storage.py  test_token_utils.py  test_web_auth.py  test_web_dashboard.py
web/: routes.py
