[project]
name = "skillence_ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2,<3",
  "httpx>=0.27,<0.28",  # pin pour compatibilité avec tests (AsyncClient(app=...))
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# liste explicite des packages au niveau racine
packages = ["api", "storage","agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"